fixing image paths

--- a/_drafts/2023-01-27-wisdoms-daughter-walks-alone.html
+++ b/_drafts/2023-01-27-wisdoms-daughter-walks-alone.html
@@ -3,7 +3,7 @@ title: Wisdom's Daughter Walks Alone
 layout: post 
 category: blog 
 date: 2023-01-27 01:18
-image: ../assets/images/blog/fibonacci-spiral.png 
+image: /assets/images/blog/fibonacci-spiral.png 
 headerImage: true 
 tag: 
 - research 
