--- a/_drafts/2023-03-23-transit.html
+++ b/_drafts/2023-03-23-transit.html
@@ -3,7 +3,7 @@ title: Public Transit
 layout: post 
 category: blog 
 date: 2023-03-23 18:58 
-image: ../assets/images/blog/airplane-silhouette.jpg 
+image: /assets/images/blog/airplane-silhouette.jpg 
 headerImage: true 
 tag: 
 - ranking 
@@ -109,7 +109,7 @@ description: "My personal ranking of major city public transit lines"
 
 <div class="text-center">
     <figure>
-        <img src="../assets/images/blog/blog-post/transit-ranking/chi-map.jpg" alt="map of Chicago train lines by color" style="max-width: 65%;">
+        <img src="/assets/images/blog/blog-post/transit-ranking/chi-map.jpg" alt="map of Chicago train lines by color" style="max-width: 65%;">
         <figcaption>The CTA train lines, or the L</figcaption>
     </figure>
 </div>
@@ -120,7 +120,7 @@ description: "My personal ranking of major city public transit lines"
 </p>
 
 <div class="text-center">
-    <img src="../assets/images/blog/blog-post/transit-ranking/mtcc.jpg" alt="IIT McCormick Tribune Campus Center in the fall">
+    <img src="/assets/images/blog/blog-post/transit-ranking/mtcc.jpg" alt="IIT McCormick Tribune Campus Center in the fall">
 </div>
 
 <p>
@@ -182,7 +182,7 @@ description: "My personal ranking of major city public transit lines"
 
 <div class="text-center">
     <figure>
-        <img src="../assets/images/blog/blog-post/transit-ranking/ventra.png" alt="blue ventra card">
+        <img src="/assets/images/blog/blog-post/transit-ranking/ventra.png" alt="blue ventra card">
         <figcaption>Ventra card</figcaption>
     </figure>
 </div>
@@ -207,7 +207,7 @@ description: "My personal ranking of major city public transit lines"
 
 <div class="text-center"> 
     <figure>
-        <img src="../assets/images/blog/blog-post/transit-ranking/toronto-map.jpg" alt="map of Toronto train lines">
+        <img src="/assets/images/blog/blog-post/transit-ranking/toronto-map.jpg" alt="map of Toronto train lines">
         <figcaption>The Toronto Transit Commission (TTC) subway lines</figcaption>
     </figure>
 </div>
@@ -218,7 +218,7 @@ description: "My personal ranking of major city public transit lines"
 </p>
 
 <div class="text-center">
-    <img src="../assets/images/blog/blog-post/transit-ranking/toronto-street-car.jpg" alt="red toronto street car in the snow" style="max-width: 85%;">
+    <img src="/assets/images/blog/blog-post/transit-ranking/toronto-street-car.jpg" alt="red toronto street car in the snow" style="max-width: 85%;">
 </div>
 
 <p>
@@ -269,7 +269,7 @@ description: "My personal ranking of major city public transit lines"
 
 <div class="text-center">
     <figure>
-        <img src="../assets/images/blog/blog-post/transit-ranking/presto.png" alt="black Presto card" style="max-width: 60%;">
+        <img src="/assets/images/blog/blog-post/transit-ranking/presto.png" alt="black Presto card" style="max-width: 60%;">
         <figcaption>
             PRESTO card
         </figcaption>
@@ -295,7 +295,7 @@ description: "My personal ranking of major city public transit lines"
 
 <div class="text-center">    
     <figure>
-        <img src="../assets/images/blog/blog-post/transit-ranking/la-transit.png" alt="LA metro lines" style="max-width:90%">
+        <img src="/assets/images/blog/blog-post/transit-ranking/la-transit.png" alt="LA metro lines" style="max-width:90%">
         <figcaption>LA Metro Rail</figcaption>
     </figure>
 </div>
@@ -306,7 +306,7 @@ description: "My personal ranking of major city public transit lines"
 </p>
 
 <div class="text-center">
-    <img src="../assets/images/blog/blog-post/transit-ranking/la-bus.jpg" alt="orange LA bus" style="max-width:75%">
+    <img src="/assets/images/blog/blog-post/transit-ranking/la-bus.jpg" alt="orange LA bus" style="max-width:75%">
 </div>
 
 <p>
