--- a/_posts/2000-01-01-cheat-sheet.html
+++ b/_posts/2000-01-01-cheat-sheet.html
@@ -3,7 +3,7 @@ title: Cheat Sheet
 layout: post
 category: blog 
 date: 2000-01-01 00:00
-image: ../assets/images/blog/pen.png
+image: /assets/images/blog/pen.png
 headerImage: true 
 nodate: true
 author: kjros 
