--- a/_posts/2000-01-02-currated-playlist.html
+++ b/_posts/2000-01-02-currated-playlist.html
@@ -3,7 +3,7 @@ title: Currated Playlist
 layout: post 
 category: blog
 date: 2000-01-02 00:00
-image: ../assets/images/blog/music-note.png
+image: /assets/images/blog/music-note.png
 headerImage: true 
 nodate: true 
 author: kjros 
