--- a/_posts/2000-01-03-wistem.html
+++ b/_posts/2000-01-03-wistem.html
@@ -10,10 +10,10 @@ hidden: true
 ---
 
 <div class="text-center">
-  <img src="../assets/images/wistem-insta-cotreasurer.jpg" alt="instagram exec board post of me" style="max-width:55%; margin-bottom: 7px;">
+  <img src="/assets/images/wistem-insta-cotreasurer.jpg" alt="instagram exec board post of me" style="max-width:55%; margin-bottom: 7px;">
   <br>
   <figure>
-    <img src="../assets/images/wistem-exec-2023.JPG" alt="exec board of wistem in 2023 standing in a row" style="max-width:80%">
+    <img src="/assets/images/wistem-exec-2023.JPG" alt="exec board of wistem in 2023 standing in a row" style="max-width:80%">
     <figcaption>2023 Executive Board of WiSTEM</figcaption>   
   </figure>
 </div>
@@ -54,7 +54,7 @@ Aside from events, my favorite WiSTEM activities are the newsletter and takeover
   </p>
 
 <div class="text-center">
-    <img src="../assets/images/wistem-newsletter.jpg" alt="first few paragraphs of molten mathematics article" style="max-width:60%">
+    <img src="/assets/images/wistem-newsletter.jpg" alt="first few paragraphs of molten mathematics article" style="max-width:60%">
 </div>
 
 <p>
@@ -65,5 +65,5 @@ Aside from events, my favorite WiSTEM activities are the newsletter and takeover
 </p>
 
 <div class="text-center">
-    <img src="../assets/images/wistem-takeover.jpg" alt="wistem takeover photo of me at navy pier" style="max-width:65%">
+    <img src="/assets/images/wistem-takeover.jpg" alt="wistem takeover photo of me at navy pier" style="max-width:65%">
 </div>
