--- a/_posts/2020-09-05-snapshots-aug-2022-sf.html
+++ b/_posts/2020-09-05-snapshots-aug-2022-sf.html
@@ -1,7 +1,7 @@
 --- 
 title: "August 2022: San Francisco"
 layout: post 
-image: ../assets/images/camera.png 
+image: /assets/images/camera.png 
 headerImage: true
 tag: 
 - San Francisco 
