--- a/_posts/2020-09-07-snapshots-dec-2022-nyc.html
+++ b/_posts/2020-09-07-snapshots-dec-2022-nyc.html
@@ -1,7 +1,7 @@
 ---
 title: "December 2022: NYC"
 layout: post 
-image: ../assets/images/camera.png
+image: /assets/images/camera.png
 headerImage: true 
 tag: 
 - New York City
