--- a/_posts/2020-09-08-snapshots-jan-2023-mar-2023.html
+++ b/_posts/2020-09-08-snapshots-jan-2023-mar-2023.html
@@ -1,7 +1,7 @@
 --- 
 title: "January 2023  - March 2023"
 layout: post 
-image: ../assets/images/camera.png 
+image: /assets/images/camera.png 
 headerImage: true 
 potpourri: true
 category: potpourri
