--- a/_posts/2022-12-24-diving-into-machine-learning-at-SURE.html
+++ b/_posts/2022-12-24-diving-into-machine-learning-at-SURE.html
@@ -37,7 +37,7 @@ externalLink: false
 </p>
 
 <div class="text-center">
-    <img src="../assets/images/projects/sure-siegal.jpeg" alt="SURE program at Siegal Hall" style="object-fit: contain;">
+    <img src="/assets/images/projects/sure-siegal.jpeg" alt="SURE program at Siegal Hall" style="object-fit: contain;">
 </div>
 
 <p>  
@@ -47,7 +47,7 @@ externalLink: false
 </p>
 
 <div class="text-center">
-    <img src="../assets/images/projects/sure-cardinality.png" alt="hub cardinality vs cluster graph" style="object-fit: contain;">
+    <img src="/assets/images/projects/sure-cardinality.png" alt="hub cardinality vs cluster graph" style="object-fit: contain;">
 </div>
 
 <p>  
@@ -59,7 +59,7 @@ externalLink: false
 </p>
 
 <div class="text-center">
-    <img src="../assets/images/projects/sure-entropy-loss.png" alt="entropy loss vs data points graph" style="object-fit: contain">  
+    <img src="/assets/images/projects/sure-entropy-loss.png" alt="entropy loss vs data points graph" style="object-fit: contain">  
 </div>
 
 <p>  
