--- a/_posts/2022-12-24-out-of-this-world-research-at-IPAM.html
+++ b/_posts/2022-12-24-out-of-this-world-research-at-IPAM.html
@@ -48,7 +48,7 @@ externalLink: false
 
 <div class= "text-center">
     <figure>
-        <img src="../assets/images/projects/ipam.jpg" alt="my research team outside of IPAM" style="max-width:50%">
+        <img src="/assets/images/projects/ipam.jpg" alt="my research team outside of IPAM" style="max-width:50%">
         <figcaption> My team. Not pictured: my favorite office-mate and coding partner, who escaped to the East Coast shortly before the end of the summer.</figcaption>   
     </figure>
 </div>
@@ -75,7 +75,7 @@ externalLink: false
 </p>
 
 <div class="text-center">
-    <img src="../assets/images/projects/wrapped-dcl.png" alt="dcl results on satellite uncertainties">
+    <img src="/assets/images/projects/wrapped-dcl.png" alt="dcl results on satellite uncertainties">
 </div>
 
 <p>  
@@ -92,7 +92,7 @@ externalLink: false
 </p>
 
 <div class="text-center">
-    <img src="../assets/images/projects/naive_beta_tuning_80hr.png" alt="naive filter beta tuning graph">
+    <img src="/assets/images/projects/naive_beta_tuning_80hr.png" alt="naive filter beta tuning graph">
 </div>
 
 <p>
@@ -116,7 +116,7 @@ externalLink: false
 </p>
 
 <p class="text-center">
-    <img src="../assets/images/projects/ncuwm.jpg" alt="me standing in front of my poster" style="max-width:50%">
+    <img src="/assets/images/projects/ncuwm.jpg" alt="me standing in front of my poster" style="max-width:50%">
 </p>
 
 <p>
