--- a/_posts/2023-01-11-JMM-in-Boston.html
+++ b/_posts/2023-01-11-JMM-in-Boston.html
@@ -3,7 +3,7 @@ title: "A Group of Mathematicians Walk into a Convention Center..."
 layout: post
 category: blog 
 date: 2023-01-11 15:41
-image: ../assets/images/blog/fibonacci-spiral.png
+image: /assets/images/blog/fibonacci-spiral.png
 headerImage: true
 tag: 
 - research
@@ -120,7 +120,7 @@ description: "My week in Boston at the biggest math conference in the world"
     Or: everything from laser-cut sculptures to knitted Klein bottles. 
     I walked through the displays at least three times, reading about fractals: 
     <div class="text-center">
-        <img src="../assets/images/blog/blog-post/JMM/iridescent-fractal.jpg" 
+        <img src="/assets/images/blog/blog-post/JMM/iridescent-fractal.jpg" 
         alt="dichroic crystal made of iridescent acrylic planes" style="max-width:70%"> 
     </div>
 </p>
@@ -128,7 +128,7 @@ description: "My week in Boston at the biggest math conference in the world"
 <p>
     and admiring the geometric patterns:
     <div class="text-center">
-        <img src="../assets/images/blog/blog-post/JMM/wood-cut-cubes.jpg" 
+        <img src="/assets/images/blog/blog-post/JMM/wood-cut-cubes.jpg" 
         alt="hollow wooden cubes with laser cut patterns on the faces" style="max-width:70%">
     </div>
 </p>
@@ -136,7 +136,7 @@ description: "My week in Boston at the biggest math conference in the world"
 <p> 
     To my delight, I saw a level 3 Menger sponge (using 32,000 Lego bricks!): 
     <div class="text-center">
-        <img src="../assets/images/blog/blog-post/JMM/menger-sponge.jpg" 
+        <img src="/assets/images/blog/blog-post/JMM/menger-sponge.jpg" 
         alt="level 3 Menger sponge in different colored lego blocks" style="max-width:75%">
     </div>
 </p>
@@ -162,7 +162,7 @@ description: "My week in Boston at the biggest math conference in the world"
 <p>
     Another cool display? An enigma machine! 
     <div class="text-center">
-        <img src="../assets/images/blog/blog-post/JMM/enigma-machine.jpg" alt="old enigma machine opened up">
+        <img src="/assets/images/blog/blog-post/JMM/enigma-machine.jpg" alt="old enigma machine opened up">
     </div>
 </p>
 
