--- a/_posts/2023-01-28-the-bookworms-booklist.html
+++ b/_posts/2023-01-28-the-bookworms-booklist.html
@@ -3,7 +3,7 @@ title: The Bookworm's Booklist
 layout: post 
 category: blog 
 date: 2023-01-28 03:38
-image: ../assets/images/blog/crown.png 
+image: /assets/images/blog/crown.png 
 headerImage: true 
 tags:  
 - reading
@@ -33,7 +33,7 @@ description: "Objectively, the best books to read, ever"
 </h3>
 
 <div class="text-center">
-    <img src="../assets/images/blog/blog-post/book-recs/a-little-life.jpg" alt="cover of A Little Life">
+    <img src="/assets/images/blog/blog-post/book-recs/a-little-life.jpg" alt="cover of A Little Life">
     <p>
         Genre: <i>contemporary fiction</i>
     </p>
@@ -65,7 +65,7 @@ description: "Objectively, the best books to read, ever"
 </h3>
 
 <div class="text-center">
-    <img src="../assets/images/blog/blog-post/book-recs/geb.jpg" alt="cover of Godel, Escher, and Bach">
+    <img src="/assets/images/blog/blog-post/book-recs/geb.jpg" alt="cover of Godel, Escher, and Bach">
     <p>
         Genre: <i>nonfiction, philosophy, mathematics, cognitive science</i>
     </p>
@@ -100,7 +100,7 @@ description: "Objectively, the best books to read, ever"
 </h3>
 
 <div class="text-center">
-    <img src="../assets/images/blog/blog-post/book-recs/speaker-for-the-dead.jpeg" alt="cover of Speaker for the Dead">
+    <img src="/assets/images/blog/blog-post/book-recs/speaker-for-the-dead.jpeg" alt="cover of Speaker for the Dead">
     <p>
         Genre: <i>science fiction</i>
     </p>
@@ -132,7 +132,7 @@ description: "Objectively, the best books to read, ever"
 </h3>
 
 <div class="text-center">
-    <img src="../assets/images/blog/blog-post/book-recs/phantom-tollbooth.jpg" alt="cover of The Phantom Tollbooth">
+    <img src="/assets/images/blog/blog-post/book-recs/phantom-tollbooth.jpg" alt="cover of The Phantom Tollbooth">
     <p>
         Genre: <i>children's fantasy, adventure</i>
     </p>
@@ -162,7 +162,7 @@ description: "Objectively, the best books to read, ever"
 </h3>
 
 <div class="text-center">
-    <img src="../assets/images/blog/blog-post/book-recs/american-gods.jpg" alt="cover of American Gods">
+    <img src="/assets/images/blog/blog-post/book-recs/american-gods.jpg" alt="cover of American Gods">
     <p>
         Genre: <i>fantasy</i>
     </p>
