--- a/_posts/2023-03-03-cinematics-sans-mathematics.html
+++ b/_posts/2023-03-03-cinematics-sans-mathematics.html
@@ -3,7 +3,7 @@ title: Cinematics (Sans Mathematics)
 layout: post 
 category: blog 
 date: 2023-03-03 00:25
-image: ../assets/images/blog/crown.png
+image: /assets/images/blog/crown.png
 headerImage: true 
 tags: 
 - movies 
@@ -26,7 +26,7 @@ description: "moves I like better than others"
 </h3>
 
 <div class="text-center">
-    <img src="../assets/images/blog/blog-post/movie-recs/clue.jpg" style="max-width: 60%; height:auto" alt="clue movie poster">
+    <img src="/assets/images/blog/blog-post/movie-recs/clue.jpg" style="max-width: 60%; height:auto" alt="clue movie poster">
     <p>
         Genre: <i>mystery, black comedy</i>
     </p>
@@ -74,7 +74,7 @@ description: "moves I like better than others"
 </h3>
 
 <div class="text-center"> 
-    <img src="../assets/images/blog/blog-post/movie-recs/spider-verse.jpg" style="max-width: 60%; height:auto"  alt="spiderverse movie poster">
+    <img src="/assets/images/blog/blog-post/movie-recs/spider-verse.jpg" style="max-width: 60%; height:auto"  alt="spiderverse movie poster">
     <p>
         Genre: <i>action, adventure, animated</i>
     </p>
@@ -99,7 +99,7 @@ description: "moves I like better than others"
 </h3>
 
 <div class="text-center"> 
-    <img src="../assets/images/blog/blog-post/movie-recs/knives-out.jpg" alt="knives out and glass onion movie poster">
+    <img src="/assets/images/blog/blog-post/movie-recs/knives-out.jpg" alt="knives out and glass onion movie poster">
     <p>
         Genre: <i>mystery</i>
     </p>
@@ -125,7 +125,7 @@ description: "moves I like better than others"
 </h3>
 
 <div class="text-center">
-    <img src="../assets/images/blog/blog-post/movie-recs/baby-driver.jpg" style="max-width: 60%; height:auto"  alt="baby driver movie poster">
+    <img src="/assets/images/blog/blog-post/movie-recs/baby-driver.jpg" style="max-width: 60%; height:auto"  alt="baby driver movie poster">
     <p>
         Genre: <i>action, crime drama</i>
     </p>
@@ -150,7 +150,7 @@ description: "moves I like better than others"
 </h3>
 
 <div class="text-center">
-    <img src="../assets/images/blog/blog-post/movie-recs/coraline.jpg" style="max-width: 60%; height:auto"  alt="coraline movie poster">
+    <img src="/assets/images/blog/blog-post/movie-recs/coraline.jpg" style="max-width: 60%; height:auto"  alt="coraline movie poster">
     <p>
         Genre: <i>stop motion, dark fantasy, horror</i>
     </p>
@@ -177,7 +177,7 @@ description: "moves I like better than others"
 </h3>
 
 <div class="text-center">
-    <img src="../assets/images/blog/blog-post/movie-recs/500-days.jpg" style="max-width: 60%; height:auto" alt="500 days of summer movie poster">
+    <img src="/assets/images/blog/blog-post/movie-recs/500-days.jpg" style="max-width: 60%; height:auto" alt="500 days of summer movie poster">
     <p>
         Genre: <i>rom-com, drama</i>
     </p>
@@ -218,7 +218,7 @@ description: "moves I like better than others"
 </h3>
 
 <div class="text-center">
-    <img src="../assets/images/blog/blog-post/movie-recs/good-will-hunting.jpg" style="max-width: 60%; height:auto" alt="good will hunting movie poster">
+    <img src="/assets/images/blog/blog-post/movie-recs/good-will-hunting.jpg" style="max-width: 60%; height:auto" alt="good will hunting movie poster">
     <p>
         Genre: <i>drama</i>
     </p>
