--- a/_posts/2023-04-09-20-20-television.html
+++ b/_posts/2023-04-09-20-20-television.html
@@ -3,7 +3,7 @@ title: 20/20 (Tele)vision
 layout: post 
 category: blog
 date: 2023-04-09 02:17
-image: ../assets/images/blog/crown.png 
+image: /assets/images/blog/crown.png 
 headerImage: true 
 tags: 
 - TV
@@ -22,7 +22,7 @@ description: "Netflix binges for lazy days"
 <h3>1. Sherlock (2010-2017)</h3>
 
 <div class="text-center">
-    <img src="../assets/images/blog/blog-post/tv-recs/sherlock-wedding.jpg" alt="sherlock and moriarty drinking tea" style="max-width:95%">
+    <img src="/assets/images/blog/blog-post/tv-recs/sherlock-wedding.jpg" alt="sherlock and moriarty drinking tea" style="max-width:95%">
     <p>Genre: <i>mystery, crime, drama</i></p>
 </div>
 
@@ -46,7 +46,7 @@ description: "Netflix binges for lazy days"
 <h3>2. BoJack Horseman (2014-2020)</h3>
 
 <div class="text-center">
-    <img src="../assets/images/blog/blog-post/tv-recs/bojack-stars.jpg" alt="bojack horseman outside observatory" style="max-width:95%">
+    <img src="/assets/images/blog/blog-post/tv-recs/bojack-stars.jpg" alt="bojack horseman outside observatory" style="max-width:95%">
     <p>Genre: <i>adult animation, black comedy, drama</i></p>
 </div>
 
@@ -72,7 +72,7 @@ description: "Netflix binges for lazy days"
 <h3>3. Demon Slayer: Kimetsu no Yaiba (2019-current)</h3>
 
 <div class="text-center">
-    <img src="../assets/images/blog/blog-post/tv-recs/demon-slayer.jpg" alt="Inosuke and Tanjiro on Mugen train" style="max-width:95%">
+    <img src="/assets/images/blog/blog-post/tv-recs/demon-slayer.jpg" alt="Inosuke and Tanjiro on Mugen train" style="max-width:95%">
     <p>Genre: <i>anime, adventure, dark fantasy</i></p>
 </div>
 
@@ -96,7 +96,7 @@ description: "Netflix binges for lazy days"
 <h3>4. Mad Men (2007-2015)</h3>
 
 <div class="text-center">
-    <img src="../assets/images/blog/blog-post/tv-recs/peggy-office.png" alt="Peggy carrying supplies in McCan hallway" style="max-width:95%">
+    <img src="/assets/images/blog/blog-post/tv-recs/peggy-office.png" alt="Peggy carrying supplies in McCan hallway" style="max-width:95%">
     <p>Genre: <i>period drama</i></p>
 </div>
 
@@ -120,7 +120,7 @@ description: "Netflix binges for lazy days"
 <h3>5. Kakegurui (2017-2019)</h3>
 
 <div class="text-center">
-    <img src="../assets/images/blog/blog-post/tv-recs/kakegurui-yumeko.png" alt="Yumeko with red eyes" style="max-width:95%">
+    <img src="/assets/images/blog/blog-post/tv-recs/kakegurui-yumeko.png" alt="Yumeko with red eyes" style="max-width:95%">
     <p>Genre: <i>anime, psycological thriller, drama</i></p>
 </div>
 
@@ -145,7 +145,7 @@ description: "Netflix binges for lazy days"
 <h3>6. Fleabag (2016-2019)</h3>
 
 <div class="text-center">
-    <img src="../assets/images/blog/blog-post/tv-recs/fleabag-confession.png" alt="Fleabag in confession" style="max-width:95%">
+    <img src="/assets/images/blog/blog-post/tv-recs/fleabag-confession.png" alt="Fleabag in confession" style="max-width:95%">
     <p>Genre: <i>black comedy, comedy-drama</i></p>
 </div>
 
@@ -173,7 +173,7 @@ description: "Netflix binges for lazy days"
 <h3>7. You (2018-current)</h3>
 
 <div class="text-center">
-    <img src="../assets/images/blog/blog-post/tv-recs/you-joe.png" alt="silhouette in front of glass cage" style="max-width:95%">
+    <img src="/assets/images/blog/blog-post/tv-recs/you-joe.png" alt="silhouette in front of glass cage" style="max-width:95%">
     <p>Genre: <i>psychological thriller</i></p>
 </div>
 
