--- a/_posts/2023-05-24-the-lead-crisis-in-chicago.html
+++ b/_posts/2023-05-24-the-lead-crisis-in-chicago.html
@@ -7,11 +7,11 @@ tag:
 - IIT 
 - Chicago 
 - public health 
-image: ../assets/images/projects/ipro/chicago.png
+image: /assets/images/projects/ipro/chicago.png
 headerImage: true
 projects: true 
 description: "My research at IIT on lead levels in Chicago water" 
-rel-path: ../assets/images/projects/ipro
+rel-path: /assets/images/projects/ipro
 category: project 
 author: kjros 
 ---
