--- a/_posts/2020-09-01-snapshots-sept-2020-may-2021.html
+++ b/_posts/2020-09-01-snapshots-sept-2020-may-2021.html
@@ -1,7 +1,7 @@
 ---
 title: "September 2020 - May 2021"
 layout: post
-image: ../assets/images/camera.png
+image: /assets/images/camera.png
 headerImage: true
 potpourri: true
 category: potpourri
