--- a/_posts/2020-09-02-snapshots-june-2021-mar-2022.html
+++ b/_posts/2020-09-02-snapshots-june-2021-mar-2022.html
@@ -1,7 +1,7 @@
 ---
 title: "June 2021 - March 2022"
 layout: post
-image: ../assets/images/camera.png
+image: /assets/images/camera.png
 headerImage: true
 potpourri: true
 category: potpourri
