--- a/_posts/2020-09-03-snapshots-mar-2022-toronto.html
+++ b/_posts/2020-09-03-snapshots-mar-2022-toronto.html
@@ -1,7 +1,7 @@
 ---
 title: "March 2022: Toronto"
 layout: post
-image: ../assets/images/camera.png
+image: /assets/images/camera.png
 headerImage: true
 tag: 
 - Toronto
