--- a/_posts/2020-09-04-snapshots-june-2022-aug-2022-la.html
+++ b/_posts/2020-09-04-snapshots-june-2022-aug-2022-la.html
@@ -1,7 +1,7 @@
 --- 
 title: "June 2022 - August 2022: LA"
 layout: post 
-image: ../assets/images/camera.png 
+image: /assets/images/camera.png 
 headerImage: true 
 tag: 
 - Los Angeles
