--- a/_posts/2020-09-06-snapshots-aug-2022-nov-2022.html
+++ b/_posts/2020-09-06-snapshots-aug-2022-nov-2022.html
@@ -1,7 +1,7 @@
 --- 
 title: "August 2022 - November 2022"
 layout: post 
-image: ../assets/images/camera.png 
+image: /assets/images/camera.png 
 headerImage: true 
 potpourri: true 
 category: potpourri 
