--- a/_posts/2020-09-09-snapshots-march-2023-dc.html
+++ b/_posts/2020-09-09-snapshots-march-2023-dc.html
@@ -1,7 +1,7 @@
 ---
 title: "March 2023: DC"
 layout: post 
-image: ../assets/images/camera.png 
+image: /assets/images/camera.png 
 headerImage: true 
 tag: 
   - DC
