--- a/_posts/2020-09-10-snapshots-mar2023-may2023.html
+++ b/_posts/2020-09-10-snapshots-mar2023-may2023.html
@@ -1,7 +1,7 @@
 ---
 title: "March 2023 - May 2023"
 layout: post 
-image: ../assets/images/camera.png 
+image: /assets/images/camera.png 
 potpourri: true 
 category: potpourri 
 rel_path: mar23-may23
