--- a/_posts/2020-09-11-snapshots-seattle.html
+++ b/_posts/2020-09-11-snapshots-seattle.html
@@ -1,7 +1,7 @@
 ---
 title: "Seattle"
 layout: post 
-image: ../assets/images/camera.png 
+image: /assets/images/camera.png 
 headerImage: true 
 tag: 
   - Seattle
