fixing more image paths

--- a/_drafts/2023-03-23-transit.html
+++ b/_drafts/2023-03-23-transit.html
@@ -96,7 +96,7 @@ description: "My personal ranking of major city public transit lines"
 </p>
 
 <div class="text-center">
-    <img src="..\assets\images\blog\blog-post\transit-ranking\score-eq.png">
+    <img src="/assets/images/blog/blog-post/transit-ranking/score-eq.png">
 </div>
 
 <p>
