--- a/_posts/2020-09-04-snapshots-june-2022-aug-2022-la.html
+++ b/_posts/2020-09-04-snapshots-june-2022-aug-2022-la.html
@@ -153,7 +153,7 @@ images:
 --- 
 
 
-<link rel="stylesheet" type="text/css" href="../gallery.css"/>
+<link rel="stylesheet" type="text/css" href="/gallery.css"/>
 
 
 <p class="text-center">
