--- a/_posts/2020-09-05-snapshots-aug-2022-sf.html
+++ b/_posts/2020-09-05-snapshots-aug-2022-sf.html
@@ -57,7 +57,7 @@ images:
   desc: Vietnamese on Irving St. Flank steak pho, much needed after a long day of traveling
 --- 
 
-<link rel="stylesheet" type="text/css" href="../gallery.css"/>
+<link rel="stylesheet" type="text/css" href="/gallery.css"/>
 
 <p class="text-center">
   This, by far, is my most impulsive decision to date. Turns out, deciding to visit San Francisco and planning an entire weekend trip 
