--- a/_posts/2022-12-24-diving-into-machine-learning-at-SURE.html
+++ b/_posts/2022-12-24-diving-into-machine-learning-at-SURE.html
@@ -6,7 +6,7 @@ tag:
 - research
 - IIT
 - Chicago
-image: ..\assets\images\projects\kmeans.jpg
+image: /assets/images/projects/kmeans.jpg
 headerImage: true
 projects: true
 hidden: true 
