--- a/_posts/2022-12-24-hello-world.html
+++ b/_posts/2022-12-24-hello-world.html
@@ -3,7 +3,7 @@ title: "Hello, World!"
 layout: post
 category: blog 
 date: 2022-12-24 02:25
-image: ..\assets\images\blog\pen.png
+image: /assets/images/blog/pen.png
 headerImage: true
 tag: 
 - sin/cos
