--- a/_posts/2022-12-24-out-of-this-world-research-at-IPAM.html
+++ b/_posts/2022-12-24-out-of-this-world-research-at-IPAM.html
@@ -6,7 +6,7 @@ tag:
 - research
 - IPAM
 - Los Angeles
-image: ..\assets\images\projects\satellite-silhouette.png
+image: /assets/images/projects/satellite-silhouette.png
 headerImage: true
 projects: true
 hidden: true 
