--- a/_posts/2022-12-29-adventures-in-LA.html
+++ b/_posts/2022-12-29-adventures-in-LA.html
@@ -3,7 +3,7 @@ title: "Adventures in LA"
 layout: post
 category: blog 
 date: 2022-12-28 03:23
-image: ..\assets\images\blog\airplane-silhouette.jpg
+image: /assets/images/blog/airplane-silhouette.jpg
 headerImage: true
 tag:
 - travel
@@ -129,7 +129,7 @@ My answers, to their disappointment:
 </p>
 
 <div class="text-center">
-    <img class="image" src="..\assets\images\blog\blog-post\santa-monica-meme-house.jpg" 
+    <img class="image" src="/assets/images/blog/blog-post/santa-monica-meme-house.jpg" 
     alt="pink and purple house on left, black and gray house on right">
 </div>
 
@@ -166,7 +166,7 @@ My answers, to their disappointment:
 </p>
 
 <div class="text-center">
-    <img class="image" src="..\assets\images\blog\blog-post\robert-skeleton.jpg" 
+    <img class="image" src="/assets/images/blog/blog-post/robert-skeleton.jpg" 
     alt="a levitating skeleton made of glass and pulsing neon blue light" style="max-width:65%">
 </div>
 
