--- a/_posts/2023-01-24-music-no-one-else-can-hear.html
+++ b/_posts/2023-01-24-music-no-one-else-can-hear.html
@@ -4,7 +4,7 @@ layout: post
 category: blog
 hidden: true
 date: 2023-01-24 10:10
-image: ..\assets\images\blog\pen.png
+image: /assets/images/blog/pen.png
 headerImage: true 
 tag: 
 - music 
