moving to new projects folder

--- a/_posts/projects/2021-06-02-out-of-this-world-research-at-IPAM.html
+++ b/_posts/projects/2021-06-02-out-of-this-world-research-at-IPAM.html
@@ -8,7 +8,7 @@ tag:
 - Los Angeles
 image: /assets/images/projects/satellite-silhouette.png
 headerImage: true
-category: project
+category: projects
 hidden: true 
 description: "My research at IPAM on pLEO satellites"
 author: kjros
