--- a/_posts/projects/2021-06-23-the-lead-crisis-in-chicago.html
+++ b/_posts/projects/2021-06-23-the-lead-crisis-in-chicago.html
@@ -9,7 +9,7 @@ tag:
 - public health 
 image: /assets/images/projects/ipro/chicago.png
 headerImage: true 
-category: project
+category: projects
 description: "My research at IIT on lead levels in Chicago water" 
 rel-path: /assets/images/projects/ipro 
 author: kjros 
