--- a/_posts/projects/2021-06-01-diving-into-machine-learning-at-SURE.html
+++ b/_posts/projects/2021-06-01-diving-into-machine-learning-at-SURE.html
@@ -8,7 +8,7 @@ tag:
 - Chicago
 image: /assets/images/projects/kmeans.jpg
 headerImage: true
-category: project
+category: projects
 hidden: true 
 description: "My research at SURE on data reduction and machine learning"
 author: kjros
