update wistem post

--- a/_posts/2000-01-03-wistem.html
+++ b/_posts/2000-01-03-wistem.html
@@ -8,6 +8,21 @@ author: kjros
 description: "my involvement in WiSTEM"
 hidden: true 
 ---
+<style>
+    /* Three image containers (use 25% for four, and 50% for two, etc) */
+    .column {
+    float: left;
+    width: 48%;
+    padding: 5px;
+    }
+
+    /* Clear floats after image containers */
+    .row::after {
+    content: "";
+    clear: both;
+    display: table;
+    }
+</style>
 
 <div class="text-center">
   <img src="/assets/images/wistem-insta-cotreasurer.jpg" alt="instagram exec board post of me" style="max-width:55%; margin-bottom: 7px;">
@@ -25,7 +40,7 @@ hidden: true
     as provide support and opportunities across many different majors. 
 </p>
 <p>
-    WiSTEM comrpises of an executive board, STEM major represenatives, and general body members. In August 2021, I began 
+    WiSTEM comprises of an executive board, STEM major represenatives, and general body members. In August 2021, I began 
     serving as the Applied Mathematics representative. Since May 2022, I have been the treasurer on the board.
 </p>
 
@@ -50,36 +65,26 @@ Aside from events, I love speaking to new and prospective students on behalf of 
     I posted my classes of the day, shared school tips, and had a Q&A session about myself and my major. 
 </p>
 
-<p>
-    Additionally, WiSTEM has a very active Instagram account. 
-    Members often do an "Instagram Takeover." I have 
-    done the takeover twice thus far: once while I was a math rep, and once as the co-treasurer. 
-    I posted my classes of the day, shared school tips, and answered questions about my major and myself! 
-</p>
-
-<div class="text-center">
-    <img src="/assets/images/wistem-takeover.jpg" alt="wistem takeover photo of me at navy pier" style="max-width:65%">
+<div class="row">
+  <div class="column">
+    <img src="/assets/images/wistem-takeover.jpg" alt="wistem takeover photo of me at navy pier"> 
+    </div>
+    <div class="column">
+        <img src="/assets/images/takeover-org-day.png" alt="my schedule of a school day">
+    </div>
 </div>
 
 <p>
-    Professors have also invited me to talk to Applied Math: Intro to the Profession classes to discuss my experience and WiSTEM. 
+    Professors in the AMAT department have also invited me to speak to the incoming students about my experience and WiSTEM.
 </p>
 
-<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRElwA_qfeRZfEoJWhxUsI-bD4AUSZsKpSm7f8SSRCKCvnjXe80dDqc8EGIbiSpH5qn7sDEcZhigRke/embed?start=false&loop=false&delayms=3000" 
-frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-
-<!-- 
-Aside from events, my favorite WiSTEM activities are the newsletter and takeovers! 
+<div class="embed-container"
+ style="position: relative; padding-bottom: 59.27%; height: 0; overflow: hidden; max-width: 100%;">
+ <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
+  src="https://docs.google.com/presentation/d/e/2PACX-1vRElwA_qfeRZfEoJWhxUsI-bD4AUSZsKpSm7f8SSRCKCvnjXe80dDqc8EGIbiSpH5qn7sDEcZhigRke/embed?start=false&loop=false&delayms=3000"
+   frameborder="0" width="960" height="569" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
+</div>
 
 <p>
-    A few times a semester, board members and representatives write and publish newsletters 
-    on the WiSTEM website. Articles discuss future events, featured women in STEM, editorials, and more! 
-    For Vol. 3, Issue 2, I wrote for the section "New in STEM".
-    The article, "<a href="https://sites.google.com/iit.edu/wistem/newsletters/volume-3-issue-2-text-version?authuser=0#h.bmfi9l90iqud"
-    target="_blank">Molten Mathematics</a>," reviewed the work of mathematicians studying Surtseyan 
-    volcanic bombs in 2021, and discussed the use of computer simulations in research across STEM.  
+    It is my hope the organization thrives well after I graduate and continue to serve IIT students.
 </p>
-
-<div class="text-center">
-    <img src="/assets/images/wistem-newsletter.jpg" alt="first few paragraphs of molten mathematics article" style="max-width:60%">
-</div>
