move wistem post to activities category

--- a/_posts/activities/2000-01-03-wistem.html
+++ b/_posts/activities/2000-01-03-wistem.html
@@ -1,12 +1,16 @@
 ---
 title: Women in STEM (WiSTEM)
 layout: post 
-category: blog 
+category: activities 
+image: /assets/images/activities/wistem/wistem-sticker.jpg
+headerImage: true
 date: 2000-01-03 00:00 
+tag: 
+- IIT 
+- Chicago 
 nodate: true 
 author: kjros 
 description: "my involvement in WiSTEM"
-hidden: true 
 ---
 <style>
     /* Three image containers (use 25% for four, and 50% for two, etc) */
@@ -25,10 +29,10 @@ hidden: true
 </style>
 
 <div class="text-center">
-  <img src="/assets/images/wistem-insta-cotreasurer.jpg" alt="instagram exec board post of me" style="max-width:55%; margin-bottom: 7px;">
+  <img src="/assets/images/activities/wistem/wistem-insta-cotreasurer.jpg" alt="instagram exec board post of me" style="max-width:55%; margin-bottom: 7px;">
   <br>
   <figure>
-    <img src="/assets/images/wistem-exec-2023.JPG" alt="exec board of wistem in 2023 standing in a row" style="max-width:80%">
+    <img src="/assets/images/activities/wistem/wistem-exec-2023.JPG" alt="exec board of wistem in 2023 standing in a row" style="max-width:80%">
     <figcaption>2023 Executive Board of WiSTEM</figcaption>   
   </figure>
 </div>
@@ -67,10 +71,10 @@ Aside from events, I love speaking to new and prospective students on behalf of 
 
 <div class="row">
   <div class="column">
-    <img src="/assets/images/wistem-takeover.jpg" alt="wistem takeover photo of me at navy pier"> 
+    <img src="/assets/images/activities/wistem/wistem-takeover.jpg" alt="wistem takeover photo of me at navy pier"> 
     </div>
     <div class="column">
-        <img src="/assets/images/takeover-org-day.png" alt="my schedule of a school day">
+        <img src="/assets/images/activities/wistem/takeover-org-day.png" alt="my schedule of a school day">
     </div>
 </div>
 
