--- a/potpourri.html
+++ b/potpourri.html
@@ -5,13 +5,12 @@ title: Potpourri
 
 <div class="text-center">
     <p>
-        In my free time, I read, play video games, and cook. Unfortunately, those activities aren't very picturesque.
-        Luckily, I also love trying new food, traveling, and exploring cities!
+        The greatest consequence of growing up is independence. There's no one stopping you from 
+        hopping on a plane to an unknown city - whether you have a plan or not. 
     </p>
-
     <p>
-        Here is a personal collection of my favorite adventures. Catch the best restaurants in Chi, 
-        gorgeous views of NYC, and my summer in California!
+        My most consistent trait is a love for new food, exploration, and travel. Here is a personal collection of my favorite adventures. 
+        Catch the best restaurants in Chi, views of NYC, and my summer in California. 
     </p>
 </div>
 
