--- a/about.html
+++ b/about.html
@@ -9,25 +9,36 @@ layout: page
 
   <img src="/assets/images/about-beanie.jpg" class="img-thumbnail" alt="profile pic of me in a beanie" style="max-width: 70%; max-height: auto; margin-bottom: 3rem;">
   
-  <p>
-    Hi, I'm Kaylee. Welcome to my site.
-  </p>
-  
-  <p>
-    I am a fourth year student, studying Applied Mathematics and Computer Science at the Illinois Institute of Technology 
-    (IIT) in Chicago, IL. 
+  <p text-align="justify">
+    Hi, I'm Kaylee. Welcome to my site. 
   </p>
 
-  <p>
-    I have always had an affinity for STEM; I grew up fiddling with puzzles and solving any equation I could get my hands on. 
-    Now, I explore the union of math and CS: algorithms and proofs, programming and logic, the concrete and the abstract.
-  </p>
-  <p>
-    I plan on graduating with a Bachelor's in Applied Mathematics and a Master's in Computer Science. 
-    At IIT, I am the co-treasurer for Women in STEM, TA for the math department, and student council member for the College of Computing.
+  <p text-align="justify">
+    I'm a fourth year, studying for an MS in Computer Science and BS in Applied Mathematics at the Illinois Institute of Technology (IIT) 
+    in Chicago, IL. 
   </p>
 
-  <p>
-    Feel free to click around, or send me an email. 
+  <p text-align="justify">
+    This started as a small, independent passion project. My advisor recommended I make a website to showcase my skills and work. I doubled down and 
+    studied HTML5 and CSS, clicked through tutorials on Github pages, and stayed up all night perfecting on-hover shadow boxes. 
   </p>
+
+  <p text-align="justify">
+    I think he meant something like a Google site. However, as I've remarked to a friend, "people are only as ambitious as is expected of them."
+    I don't intend on merely fulfilling expectations. 
+  </p>
+
+  <p text-align="justify">
+    So, I've been growing this site, line by line. I hope to keep learning more about front-end development, and implementing new features 
+    in a way that truly reflects my interests, personality, and style. After all, a resume can only do so much. 
+  </p>
+
+  <p text-align="justify">
+    If you're interested in my work on data filtering, satellite simulations, or Chicago lead poisoning, click <a href="{{ site.url }}/projects">here</a>.
+    If you want to learn about my involvement in the best (female-led) organization at IIT, read <a href="{{ site.url }}/activities/wistem">this</a>.
+    And for fun posts and pictures, go ahead and explore <a href="{{ site.url }}/blog">my blog</a> and <a href="{{ site.url }}/potpourri">my picture gallery</a>!
+  </p>
+
+  <p text-align="justify">Any questions? Reach out; I'd love to get to know you!</p>
+
 </div>
