light/dark for sure post

--- a/_posts/projects/2021-06-01-diving-into-machine-learning-at-SURE.html
+++ b/_posts/projects/2021-06-01-diving-into-machine-learning-at-SURE.html
@@ -6,7 +6,8 @@ tag:
 - research
 - IIT
 - Chicago
-image: /assets/images/projects/kmeans.jpg
+image: /assets/images/projects/kmeans-light.jpg
+image-dark: /assets/images/projects/kmeans-dark.png
 headerImage: true
 category: projects
 hidden: true 
