light/dark for RIPS satellite

--- a/_posts/projects/2021-06-02-out-of-this-world-research-at-IPAM.html
+++ b/_posts/projects/2021-06-02-out-of-this-world-research-at-IPAM.html
@@ -6,7 +6,8 @@ tag:
 - research
 - IPAM
 - Los Angeles
-image: /assets/images/projects/satellite-silhouette.png
+image: /assets/images/projects/satellite-silhouette-light.png
+image-dark: /assets/images/projects/satellite-silhouette-dark.png
 headerImage: true
 category: projects
 hidden: true 
