renaming SURE post

--- a/_posts/projects/2021-06-01-clustering-and-segmentation-approaches-for-big-data-filtering.html
+++ b/_posts/projects/2021-06-01-clustering-and-segmentation-approaches-for-big-data-filtering.html
@@ -1,5 +1,5 @@
 ---
-title: "Diving into Machine Learning at SURE"
+title: "Clustering and Segmentation Approaches for Big Data Filtering "
 layout: post
 date: 2022-12-24 01:14
 tag: 
