renaming RIPS post

--- a/_posts/projects/2021-06-02-experiments-for-pleo-satellite-constellations.html
+++ b/_posts/projects/2021-06-02-experiments-for-pleo-satellite-constellations.html
@@ -1,5 +1,5 @@
 ---
-title: "Out of This World Research at IPAM"
+title: "Experiments for pLEO Satellite Constellations"
 layout: post
 date: 2022-12-24 01:25
 tag: 
