--- a/about.html
+++ b/about.html
@@ -5,40 +5,40 @@ layout: page
 <!-- ![Profile Image]({% if site.external-image %}{{ site.picture }}{% else %}{{ site.url }}/{{ site.picture }}{% endif %}) -->
 
 
-<div class="{% if site.animation %}animated{% endif %}">
+<div class="text-center" style="text-align:justify;text-justify:inter-word">
 
   <img src="/assets/images/about-beanie.jpg" class="img-thumbnail" alt="profile pic of me in a beanie" style="max-width: 70%; max-height: auto; margin-bottom: 3rem;">
   
-  <p text-align="justify">
+  <p>
     Hi, I'm Kaylee. Welcome to my site. 
   </p>
 
-  <p text-align="justify">
+  <p>
     I'm a fourth year, studying for an MS in Computer Science and BS in Applied Mathematics at the Illinois Institute of Technology (IIT) 
     in Chicago, IL. 
   </p>
 
-  <p text-align="justify">
+  <p>
     This started as a small, independent passion project. My advisor recommended I make a website to showcase my skills and work. I doubled down and 
     studied HTML5 and CSS, clicked through tutorials on Github pages, and stayed up all night perfecting on-hover shadow boxes. 
   </p>
 
-  <p text-align="justify">
+  <p>
     I think he meant something like a Google site. However, as I've remarked to a friend, "people are only as ambitious as is expected of them."
     I don't intend on merely fulfilling expectations. 
   </p>
 
-  <p text-align="justify">
+  <p>
     So, I've been growing this site, line by line. I hope to keep learning more about front-end development, and implementing new features 
     in a way that truly reflects my interests, personality, and style. After all, a resume can only do so much. 
   </p>
 
-  <p text-align="justify">
+  <p>
     If you're interested in my work on data filtering, satellite simulations, or Chicago lead poisoning, click <a href="{{ site.url }}/projects">here</a>.
     If you want to learn about my involvement in the best (female-led) organization at IIT, read <a href="{{ site.url }}/activities/wistem">this</a>.
     And for fun posts and pictures, go ahead and explore <a href="{{ site.url }}/blog">my blog</a> and <a href="{{ site.url }}/potpourri">my picture gallery</a>!
   </p>
 
-  <p text-align="justify">Any questions? Reach out; I'd love to get to know you!</p>
+  <p>Any questions? Reach out; I'd love to get to know you!</p>
 
-</div>
+</div> 
