--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@ layout: page
   <img src="/assets/images/about-beanie.jpg" class="img-thumbnail" alt="profile pic of me in a beanie" style="max-width: 70%; max-height: auto; margin-bottom: 3rem;">
   
   <p>
-    Hi, I'm Kaylee. Welcome to my site. 
+    Hi, I'm Kaylee, also known as kjrosendahl (in one cadence). Welcome to my site. 
   </p>
 
   <p>
@@ -20,7 +20,7 @@ layout: page
 
   <p>
     This started as a small, independent passion project. My advisor recommended I make a website to showcase my skills and work. I doubled down and 
-    studied HTML5 and CSS, clicked through tutorials on Github pages, and stayed up all night perfecting on-hover shadow boxes. 
+    studied HTML and CSS, clicked through tutorials on Github pages, and stayed up all night perfecting on-hover shadow boxes. 
   </p>
 
   <p>
